:bug: Fixing tooltip not showing bug

--- a/css/materialize.centercorrection.css
+++ b/css/materialize.centercorrection.css
@@ -5725,40 +5725,6 @@ small {
 .tabs .tab {
   padding: 0; }
 
-.material-tooltip {
-  padding: 10px 8px;
-  font-size: 1rem;
-  z-index: 2000;
-  background-color: transparent;
-  border-radius: 2px;
-  color: #fff;
-  min-height: 36px;
-  line-height: 1rem;
-  opacity: 0;
-  display: none;
-  position: absolute;
-  text-align: center;
-  overflow: hidden;
-  left: 0;
-  top: 0;
-  will-change: top, left; }
-
-.backdrop {
-  position: absolute;
-  opacity: 0;
-  display: none;
-  height: 7px;
-  width: 14px;
-  border-radius: 0 0 14px 14px;
-  background-color: #323232;
-  z-index: -1;
-  -webkit-transform-origin: 50% 10%;
-  -moz-transform-origin: 50% 10%;
-  -ms-transform-origin: 50% 10%;
-  -o-transform-origin: 50% 10%;
-  transform-origin: 50% 10%;
-  will-change: transform, opacity; }
-
 .btn, .btn-large, .btn-flat {
   border: none;
   border-radius: 2px;
