--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3670,7 +3670,7 @@ small {
   padding: 6px;
   font-size: 1rem;
   z-index: 2000;
-  background-color: transparent;
+  background-color: #454953;
   border-radius: 2px;
   color: #fff;
   min-height: 28px;
